fixes for package postback scripts

--- a/CentOS_6.cfg
+++ b/CentOS_6.cfg
@@ -360,6 +360,7 @@ chkconfig --add sshd
 
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_6
 
 # clean up
