--- a/CentOS_6_KVM.cfg
+++ b/CentOS_6_KVM.cfg
@@ -20,7 +20,7 @@ firewall --service=ssh
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --lock
+rootpw --plaintext lockedinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
@@ -160,20 +160,6 @@ sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
 yum -y update
 yum -y upgrade
 
-# clean up
-yum clean all
-truncate -c -s 0 /var/log/yum.log
-rm -f /root/anaconda-ks.cfg
-rm -f /etc/ssh/ssh_host_*
-rm -f /etc/resolv.conf
-rm -f /root/.bash_history
-rm -f /root/.nano_history
-rm -f /root/.lesshst
-rm -f /root/.ssh/known_hosts
-rm -rf /tmp/tmp
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
-
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
@@ -204,8 +190,25 @@ cloud_config_modules:
  - byobu
 EOF
 
+# clean up
+yum clean all
+passwd -d root
+passwd -l root
+truncate -c -s 0 /var/log/yum.log
+rm -f /root/anaconda-ks.cfg
+rm -f /etc/ssh/ssh_host_*
+rm -f /etc/resolv.conf
+rm -f /root/.bash_history
+rm -f /root/.nano_history
+rm -f /root/.lesshst
+rm -f /root/.ssh/known_hosts
+rm -rf /tmp/tmp
+for k in $(find /tmp -type f); do rm -f $k; done
+for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+
 echo "done done"
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_6_KVM
 for k in $(find /var/log -type f); do echo > $k; done
 ) 2>&1 | /usr/bin/tee /var/log/post_install_chvt.log
