--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -236,6 +236,7 @@ cat > /etc/fstab <<'EOF'
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_Teeth
 
 /usr/bin/systemctl disable NetworkManager.service
