--- a/Fedora_20_Teeth.cfg
+++ b/Fedora_20_Teeth.cfg
@@ -294,6 +294,7 @@ EOF
 
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Fedora_20_Teeth
 rm -rf /root/tmp
 
