--- a/Fedora_21_KVM.cfg
+++ b/Fedora_21_KVM.cfg
@@ -217,6 +217,7 @@ WantedBy=multi-user.target
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Fedora_21_KVM
 
 # set rackspace mirrors
