--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -245,6 +245,7 @@ T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Fedora_21_Teeth
 rm -rf /root/tmp
 echo "done"
