--- a/Red_Hat_Enterprise_Linux_5_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_5_VMware.cfg
@@ -265,6 +265,7 @@ sed -i '/HOSTNAME.*/d' /etc/sysconfig/network
 chage -d 0 root
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_5_VMware
 
 # clean up
