--- a/Red_Hat_Enterprise_Linux_6_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware.cfg
@@ -340,6 +340,7 @@ rpm -Uvh rhn-org-trusted-ssl-cert*
 chage -d 0 root
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_VMware
 
 # clean up
