--- a/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
@@ -268,6 +268,7 @@ cat > /etc/hosts << EOF
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_VMware_Rax
 
 # clean up
