--- a/Ubuntu_14.04_PVHVM.cfg
+++ b/Ubuntu_14.04_PVHVM.cfg
@@ -215,6 +215,7 @@ EOF
 sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_14.04_PVHVM
 
 # clean up
