--- a/Ubuntu_14.10_KVM.cfg
+++ b/Ubuntu_14.10_KVM.cfg
@@ -11,7 +11,7 @@ keyboard us
 timezone --utc Etc/UTC
 
 #Root password
-rootpw --lock
+rootpw --plaintext lockedinpost
 
 #Initial user
 user --disabled
@@ -174,12 +174,15 @@ exec /sbin/getty -L 115200 ttyS1 xterm
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_14.10_KVM
 
 update-rc.d defaults spice-vdagentd
 echo 'blacklist bochs-drm' >> /etc/modprobe.d/blacklist.conf
 
 # clean up
+passwd -d root
+passwd -l root
 apt-get -y clean
 apt-get -y autoremove
 sed -i '/.*cdrom.*/d' /etc/apt/sources.list
