--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -217,6 +217,7 @@ rm /boot/initrd-$version.img
 mkinitrd -v --with=xenblk --with=xennet --preload=xenblk --preload=xennet --omit-scsi-modules --omit-raid-modules /boot/initrd-$version.img $version
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_5
 
 # clean up
