--- a/CentOS_5_KVM.cfg
+++ b/CentOS_5_KVM.cfg
@@ -18,7 +18,7 @@ network --onboot yes --device eth0 --bootproto dhcp
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --lock
+rootpw --plaintext lockedinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
@@ -185,6 +185,8 @@ EOF
 
 # clean up
 yum clean all
+passwd -d root
+passwd -l root
 truncate -c -s 0 /var/log/yum.log
 rm -f /etc/ssh/ssh_host_*
 #rm -f /etc/resolv.conf
@@ -199,4 +201,5 @@ for k in $(find /tmp -type f); do rm -f $k; done
 for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_5_KVM
