--- a/CentOS_5_VMware.cfg
+++ b/CentOS_5_VMware.cfg
@@ -340,6 +340,7 @@ version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}\n' | tail -n 1)
 mkinitrd -v -f --rootdev=/dev/sda1 --with=scsi_mod --with=sd_mod --with=libata --with=pvscsi --with pcnet32 --with mptbase --with mptspi --with ata_piix --preload pcnet32 --preload mptbase --preload mptspi --preload ata_piix --preload=scsi_mod --preload=sd_mod --preload=libata initrd-$version.img $version
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_5_VMware
 
 # clean up
