--- a/CentOS_6_PVHVM.cfg
+++ b/CentOS_6_PVHVM.cfg
@@ -376,6 +376,7 @@ sed -i 's/55/49/g' /etc/init.d/sshd
 chkconfig --add sshd
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_6_PVHVM
 
 # clean up
