--- a/CentOS_6_VMware_Rax_Supported.cfg
+++ b/CentOS_6_VMware_Rax_Supported.cfg
@@ -380,6 +380,7 @@ EOF
 chage -d 0 root
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_6_VMware_Rax_Supported
 
 # clean up
