--- a/CentOS_7_KVM.cfg
+++ b/CentOS_7_KVM.cfg
@@ -20,7 +20,7 @@ firewall --service=ssh
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --lock
+rootpw --plaintext lockedinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
@@ -199,9 +199,12 @@ sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda
 grub2-mkconfig -o /boot/grub2/grub.cfg
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_KVM
 
 # clean up
+passwd -d root
+passwd -l root
 rm -f /root/anaconda-ks.cfg
 yum clean all
 truncate -c -s 0 /var/log/yum.log
