--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -296,6 +296,7 @@ EOF
 grub2-mkconfig
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_PVHVM
 
 /usr/bin/systemctl disable NetworkManager-wait-online.service
