--- a/Red_Hat_Enterprise_Linux_5.cfg
+++ b/Red_Hat_Enterprise_Linux_5.cfg
@@ -243,6 +243,7 @@ mkdir -p /etc/sysconfig/rhn
 touch /etc/sysconfig/rhn/up2date
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_5
 
 # clean up
