--- a/Red_Hat_Enterprise_Linux_6_KVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_KVM.cfg
@@ -20,7 +20,7 @@ firewall --service=ssh
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --lock
+rootpw --plaintext lockedinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
@@ -201,9 +201,12 @@ wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
 rpm -Uvh rhn-org-trusted-ssl-cert*
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_KVM
 
 # clean up
+passwd -d root
+passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 rm -f /root/anaconda-ks.cfg
