--- a/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
@@ -379,6 +379,7 @@ sed -i 's/55/49/g' /etc/init.d/sshd
 chkconfig --add sshd
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_PVHVM
 
 # clean up
