--- a/Ubuntu_12.04.cfg
+++ b/Ubuntu_12.04.cfg
@@ -229,6 +229,7 @@ APT::Install-Recommends "true";
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_12.04
 
 # clean up
