--- a/Ubuntu_12.04_PVHVM.cfg
+++ b/Ubuntu_12.04_PVHVM.cfg
@@ -207,6 +207,7 @@ APT::Install-Recommends "true";
 EOF
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_12.04_PVHVM
 
 # clean up
