--- a/Ubuntu_14.04.cfg
+++ b/Ubuntu_14.04.cfg
@@ -237,6 +237,7 @@ EOF
 sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_14.04
 
 # clean up
