--- a/Ubuntu_14.04_KVM.cfg
+++ b/Ubuntu_14.04_KVM.cfg
@@ -11,7 +11,7 @@ keyboard us
 timezone --utc Etc/UTC
 
 #Root password
-rootpw --lock
+rootpw --plaintext lockedinpost
 
 #Initial user
 user --disabled
@@ -177,9 +177,12 @@ update-rc.d defaults spice-vdagentd
 echo 'blacklist bochs-drm' >> /etc/modprobe.d/blacklist.conf
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_14.04_KVM
 
 # clean up
+passwd -d root
+passwd -l root
 apt-get -y clean
 apt-get -y autoremove
 sed -i '/.*cdrom.*/d' /etc/apt/sources.list
