--- a/Ubuntu_15.04_PVHVM.cfg
+++ b/Ubuntu_15.04_PVHVM.cfg
@@ -216,6 +216,7 @@ EOF
 sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
 
 # log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_15.04_PVHVM
 
 # clean up
