--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -256,7 +256,7 @@ After=local-fs.target rc-local.service
 
 [Service]
 Type=oneshot
-ExecStartPre=/usr/bin/sleep 90
+ExecStartPre=/usr/bin/sleep 120
 ExecStart=/usr/bin/cloud-init init --local
 RemainAfterExit=yes
 TimeoutSec=0
@@ -280,6 +280,9 @@ grub2-mkconfig
 # package need for our RHN registration to work
 wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
 rpm -Uvh rhn-org-trusted-ssl-cert*
+
+# fix dns
+echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
