fixes for package postback, other fixes needed after futher testing

--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -70,7 +70,7 @@ echo "################################"
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
-wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/CentOS_6_Teeth_post.sh
+wget http://KICK_HOST/kickstarts/CentOS_6_Teeth_post.sh
 chmod +x CentOS_6_Teeth_post.sh
 bash -x CentOS_6_Teeth_post.sh
 for k in $(find /var/log -type f); do echo > $k; done
