--- a/Debian_7_PVHVM.cfg
+++ b/Debian_7_PVHVM.cfg
@@ -83,4 +83,4 @@ d-i debian-installer/exit/poweroff boolean true
 # use a static hostname so dhcp values don't creep into the image
 d-i netcfg/hostname string debian
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Debian_7_PVHVM_post.sh; chmod +x Debian_7_PVHVM_post.sh; sh -x Debian_7_PVHVM_post.sh; rm -rf /tmp/tmp; rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_7_PVHVM_post.sh; chmod +x Debian_7_PVHVM_post.sh; sh -x Debian_7_PVHVM_post.sh; rm -rf /tmp/tmp; rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
