--- a/Debian_Testing_PVHVM.cfg
+++ b/Debian_Testing_PVHVM.cfg
@@ -88,4 +88,4 @@ d-i netcfg/hostname string debian
 
 d-i popularity-contest popularity-contest/participate boolean false
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Debian_Testing_PVHVM_post.sh; chmod +x Debian_Testing_PVHVM_post.sh; bash -x Debian_Testing_PVHVM_post.sh; rm -rf /tmp/tmp; rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Testing_PVHVM_post.sh; chmod +x Debian_Testing_PVHVM_post.sh; bash -x Debian_Testing_PVHVM_post.sh; rm -rf /tmp/tmp; rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
