--- a/Debian_Unstable_KVM.cfg
+++ b/Debian_Unstable_KVM.cfg
@@ -74,4 +74,4 @@ d-i cdrom-detect/eject boolean false
 # This will power off the machine instead of just halting it.
 d-i debian-installer/exit/poweroff boolean true
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; sed -i 's/jessie/sid/g' /target/etc/apt/sources.list; in-target apt-get update; in-target apt-get -y dist-upgrade; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Debian_Unstable_KVM_post.sh; chmod +x Debian_Unstable_KVM_post.sh; sh -x Debian_Unstable_KVM_post.sh; rm -rf /tmp/tmp"
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; sed -i 's/jessie/sid/g' /target/etc/apt/sources.list; in-target apt-get update; in-target apt-get -y dist-upgrade; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Unstable_KVM_post.sh; chmod +x Debian_Unstable_KVM_post.sh; bash -x Debian_Unstable_KVM_post.sh; rm -rf /tmp/tmp"
