--- a/Fedora_21_PVHVM.cfg
+++ b/Fedora_21_PVHVM.cfg
@@ -214,11 +214,12 @@ rm -rf /boot/grub*
 version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}.%{ARCH}\n' | tail -n 1)
 cat > /boot/extlinux.conf <<EOF
 TIMEOUT 1
-ONTIMEOUT linux
-  
+default linux
+
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND initrd=/boot/initramfs-$version.img root=/dev/xvda1
+      APPEND root=/dev/xvda1
+      initrd initrd=/boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
