--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -225,11 +225,12 @@ rm -rf /boot/grub*
 version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}.%{ARCH}\n' | tail -n 1)
 cat > /boot/extlinux.conf <<EOF
 TIMEOUT 1
-ONTIMEOUT linux
-  
+default linux
+
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND initrd=/boot/initramfs-$version.img root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+      initrd initrd=/boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
