--- a/Ubuntu_10.04.cfg
+++ b/Ubuntu_10.04.cfg
@@ -95,6 +95,6 @@ d-i user-setup/allow-password-weak boolean true
 d-i cdrom-detect/eject boolean false
 #d-i cloud-init/datasources string NoCloud, ConfigDrive
 
-#d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
-d-i preseed/late_command string chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config
+#d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
+d-i preseed/late_command string chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config
 
