--- a/Ubuntu_14.04_Teeth.cfg
+++ b/Ubuntu_14.04_Teeth.cfg
@@ -90,7 +90,7 @@ curl
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
-wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Ubuntu_14.04_Teeth_post.sh
+wget http://KICK_HOST/kickstarts/Ubuntu_14.04_Teeth_post.sh
 chmod +x Ubuntu_14.04_Teeth_post.sh
 bash Ubuntu_14.04_Teeth_post.sh
 
