--- a/CentOS_6_KVM.cfg
+++ b/CentOS_6_KVM.cfg
@@ -190,6 +190,10 @@ cloud_config_modules:
  - byobu
 EOF
 
+# log packages
+wget http://KICK_HOST/kickstarts/package_postback.sh
+bash -x package_postback.sh CentOS_6_KVM
+
 # clean up
 yum clean all
 passwd -d root
@@ -205,11 +209,7 @@ rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
 for k in $(find /tmp -type f); do rm -f $k; done
 for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
-
-echo "done done"
-# log packages
-wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh CentOS_6_KVM
 for k in $(find /var/log -type f); do echo > $k; done
+echo "done done"
 ) 2>&1 | /usr/bin/tee /var/log/post_install_chvt.log
 chvt 1
