--- a/Ubuntu_12.04_Teeth.cfg
+++ b/Ubuntu_12.04_Teeth.cfg
@@ -94,6 +94,6 @@ python-json-pointer
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
-wget https://github.com/rackerlabs/base-image-blueprints/raw/master/kickstarts/Ubuntu_12.04_Teeth_post.sh
+wget http://KICK_HOST/kickstarts/Ubuntu_12.04_Teeth_post.sh
 chmod +x Ubuntu_12.04_Teeth_post.sh
 bash Ubuntu_12.04_Teeth_post.sh
