fixes bugs introduced during migration

--- a/Red_Hat_Enterprise_Linux_5.cfg
+++ b/Red_Hat_Enterprise_Linux_5.cfg
@@ -22,7 +22,7 @@ network --onboot yes --device eth0 --bootproto dhcp
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --plaintext novaagentneedsunlockedrootaccountsowedeletepasswordinpost
+rootpw novaagentneedsunlockedrootaccountsowedeletepasswordinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
