--- a/Scientific_Linux_6_PVHVM.cfg
+++ b/Scientific_Linux_6_PVHVM.cfg
@@ -5,7 +5,7 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://mirror.lstn.net/scientific/6/x86_64/os/
+url --url=http://www.gtlib.gatech.edu/pub/scientific/6/x86_64/os/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/6/x86_64/
 
 # Language and keyboard setup
