--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -18,7 +18,7 @@ network --onboot yes --device eth0 --bootproto dhcp
 timezone --utc Etc/UTC
 
 # Authentication
-rootpw --plaintext novaagentneedsunlockedrootaccountsowedeletepasswordinpost
+rootpw novaagentneedsunlockedrootaccountsowedeletepasswordinpost
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
