fixes needed after further build testing using public git source

--- a/CentOS_6_PVHVM.cfg
+++ b/CentOS_6_PVHVM.cfg
@@ -53,6 +53,7 @@ rsync
 tar
 wget
 curl
+epel-release
 openssh-clients
 python-simplejson
 python-pip
@@ -62,13 +63,6 @@ cloud-init
 dracut-modules-growroot
 parted
 
-%end
-
-%post --nochroot
-cat >> /etc/resolv.conf <<'EOF'
-nameserver 8.8.8.8
-EOF
-cp /etc/resolv.conf /mnt/sysimage/etc/resolv.conf
 %end
 
 %post --erroronfail
@@ -171,8 +165,10 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+#wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+#wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.1.0-1037.x86_64.rpm
+wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
