--- a/Fedora_21_KVM.cfg
+++ b/Fedora_21_KVM.cfg
@@ -42,7 +42,10 @@ skipx
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-bootloader --timeout=1 --append="console=ttyS0,115200n8 console=tty0 net.ifnames=0 biosdevname=0" --extlinux
+#bootloader --timeout=1 --append="console=ttyS0,115200n8 console=tty0 net.ifnames=0 biosdevname=0" --extlinux
+# extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
+# using the extlinux option from anaconda with that custom in %post breaks booting
+bootloader --disabled
 
 # Shutdown when the kickstart is done
 shutdown --eject
@@ -138,11 +141,12 @@ rm -rf /boot/grub*
 version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}.%{ARCH}\n' | tail -n 1)
 cat > /boot/extlinux.conf <<EOF
 TIMEOUT 1
-ONTIMEOUT linux
-  
+default linux
+
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND initrd=/boot/initramfs-$version.img root=/dev/vda1 net.ifnames=0 biosdevname=0 console=tty0 console=ttyS0,115200n8
+      APPEND root=/dev/xvda1 console=ttyS0,115200n8 console=tty0 net.ifnames=0 biosdevname=0
+      initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
