--- a/Ubuntu_10.04.cfg
+++ b/Ubuntu_10.04.cfg
@@ -66,7 +66,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 #cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server resolvconf sudo rsync wget curl parted debconf-utils
+d-i pkgsel/include string openssh-server sudo rsync wget curl parted debconf-utils
 #cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
 
 # Whether to upgrade packages after debootstrap.
@@ -95,6 +95,13 @@ d-i user-setup/allow-password-weak boolean true
 d-i cdrom-detect/eject boolean false
 #d-i cloud-init/datasources string NoCloud, ConfigDrive
 
-#d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
-d-i preseed/late_command string chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp" rm -f /usr/lib/finish-install.d/55netcfg-copy-config
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
+in-target mkdir /tmp/tmp;\
+in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities_6.2.0-1120_amd64.deb;\
+in-target wget -O /tmp/tmp/nova-agent-1.39.1.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39.1.deb;\
+in-target dpkg -iR /tmp/tmp;\
+in-target apt-get update;\
+in-target apt-get -y dist-upgrade;\
+in-target apt-get -y install resolvconf;\
+chroot /target sh -c "cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Ubuntu_10.04_post.sh; chmod +x Ubuntu_10.04_post.sh; sh -x Ubuntu_10.04_post.sh; rm -rf /tmp/tmp"
 
