--- a/Debian_Unstable_Teeth.cfg
+++ b/Debian_Unstable_Teeth.cfg
@@ -68,7 +68,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server resolvconf sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl
+d-i pkgsel/include string openssh-server sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
@@ -87,4 +87,11 @@ d-i debian-installer/exit/poweroff boolean true
 # use a static hostname so dhcp values don't creep into the image
 d-i netcfg/hostname string debian
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Unstable_Teeth_post.sh; chmod +x Debian_Unstable_Teeth_post.sh; bash -x Debian_Unstable_Teeth_post.sh; rm -rf /tmp/tmp; rm -f /usr/lib/finish-install.d/55netcfg-copy-config"
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
+in-target echo "deb http://mirror.rackspace.com/debian sid main" > /etc/apt/sources.list;\
+in-target echo "deb-src http://mirror.rackspace.com/debian sid main" >> /etc/apt/sources.list;\
+in-target apt-get clean;\
+in-target apt-get update;\
+in-target apt-get -y dist-upgrade;\
+in-target apt-get -y install resolvconf;\
+chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Unstable_Teeth_post.sh; chmod +x Debian_Unstable_Teeth_post.sh; bash -x Debian_Unstable_Teeth_post.sh; rm -rf /tmp/tmp"
