--- a/Fedora_20_PVHVM.cfg
+++ b/Fedora_20_PVHVM.cfg
@@ -41,7 +41,10 @@ skipx
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
+#bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
+# extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
+# using the extlinux option from anaconda with that custom in %post breaks booting
+bootloader --disabled
 
 # Shutdown when the kickstart is done
 shutdown --eject
@@ -256,8 +259,8 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/xvda1
-      initrd initrd=/boot/initramfs-$version.img
+      APPEND root=/dev/xvda1 console=ttyS0,115200n8 console=hvc0 console=tty0
+      initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
