--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -40,7 +40,10 @@ text
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0" --extlinux
+#bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0" --extlinux
+# extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
+# using the extlinux option from anaconda with that custom in %post breaks booting
+bootloader --disabled
 
 # Shutdown when the kickstart is done
 shutdown --eject
@@ -230,7 +233,7 @@ default linux
 LABEL linux
       KERNEL /boot/vmlinuz-$version
       APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
-      initrd initrd=/boot/initramfs-$version.img
+      initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
