should be final fixes for public git migrations

--- a/Debian_7_Teeth.cfg
+++ b/Debian_7_Teeth.cfg
@@ -84,7 +84,7 @@ d-i debian-installer/exit/poweroff boolean true
 d-i netcfg/hostname string debian
 
 d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
+chroot /target sh -c "cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_7_Teeth_post.sh; chmod +x Debian_7_Teeth_post.sh; sh -x Debian_7_Teeth_post.sh; rm -rf /tmp/tmp";\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
-in-target apt-get -y install resolvconf;\
-chroot /target sh -c "cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_7_Teeth_post.sh; chmod +x Debian_7_Teeth_post.sh; sh -x Debian_7_Teeth_post.sh; rm -rf /tmp/tmp"
+in-target apt-get -y install resolvconf
