--- a/Fedora_20_PVHVM.cfg
+++ b/Fedora_20_PVHVM.cfg
@@ -41,10 +41,10 @@ skipx
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-#bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
+bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
 # extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
 # using the extlinux option from anaconda with that custom in %post breaks booting
-bootloader --disabled
+#bootloader --disabled
 
 # Shutdown when the kickstart is done
 shutdown --eject
