--- a/Fedora_20_Teeth.cfg
+++ b/Fedora_20_Teeth.cfg
@@ -43,10 +43,10 @@ text
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-#bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me"
+bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me"
 # extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
 # using the extlinux option from anaconda with that custom in %post breaks booting
-bootloader --disabled
+#bootloader --disabled
 
 # Shutdown when the kickstart is done
 shutdown --eject
