--- a/CentOS_6.cfg
+++ b/CentOS_6.cfg
@@ -104,7 +104,7 @@ cat > /etc/sysconfig/ip6tables <<'EOF'
 :FORWARD ACCEPT [0:0]
 :OUTPUT ACCEPT [0:0]
 -A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
--A INPUT -p icmp -j ACCEPT
+-A INPUT -p icmpv6 -j ACCEPT
 -A INPUT -i lo -j ACCEPT
 -A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -j ACCEPT
 -A INPUT -j REJECT --reject-with icmp6-adm-prohibited
