--- a/Debian_Testing_Teeth.cfg
+++ b/Debian_Testing_Teeth.cfg
@@ -87,7 +87,7 @@ d-i debian-installer/exit/poweroff boolean true
 # use a static hostname so dhcp values don't creep into the image
 d-i netcfg/hostname string debian
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
 in-target apt-get -y install resolvconf;\
