--- a/Debian_Unstable_PVHVM.cfg
+++ b/Debian_Unstable_PVHVM.cfg
@@ -90,8 +90,8 @@ in-target mkdir /tmp/tmp;\
 in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities_6.2.0-1120_amd64.deb;\
 in-target wget -O /tmp/tmp/nova-agent-1.39.1.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39.1.deb;\
 in-target dpkg -iR /tmp/tmp;\
-in-target echo "deb http://mirror.rackspace.com/debian sid main" > /etc/apt/sources.list;\
-in-target echo "deb-src http://mirror.rackspace.com/debian sid main" >> /etc/apt/sources.list;\
+echo "deb http://mirror.rackspace.com/debian sid main" > /target/etc/apt/sources.list;\
+echo "deb-src http://mirror.rackspace.com/debian sid main" >> /target/etc/apt/sources.list;\
 in-target apt-get clean;\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
