--- a/CentOS_5_VMware_Rax_Supported.cfg
+++ b/CentOS_5_VMware_Rax_Supported.cfg
@@ -19,7 +19,7 @@ timezone --utc Etc/UTC
 
 # Authentication
 # password expires after first login
-rootpw --plaintext rackspace
+rootpw rackspace
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
