--- a/Debian_Unstable_Teeth.cfg
+++ b/Debian_Unstable_Teeth.cfg
@@ -88,8 +88,8 @@ d-i debian-installer/exit/poweroff boolean true
 d-i netcfg/hostname string debian
 
 d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
-in-target echo "deb http://mirror.rackspace.com/debian sid main" > /etc/apt/sources.list;\
-in-target echo "deb-src http://mirror.rackspace.com/debian sid main" >> /etc/apt/sources.list;\
+echo "deb http://mirror.rackspace.com/debian sid main" > /target/etc/apt/sources.list;\
+echo "deb-src http://mirror.rackspace.com/debian sid main" >> /target/etc/apt/sources.list;\
 in-target apt-get clean;\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
