--- a/Debian_7_PVHVM.cfg
+++ b/Debian_7_PVHVM.cfg
@@ -87,7 +87,7 @@ d-i netcfg/hostname string debian
 d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
 in-target mkdir /tmp/tmp;\
 in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities_6.2.0-1120_amd64.deb;\
-in-target wget -O /tmp/tmp/nova-agent-1.39.1.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39.1.deb;\
+in-target wget -O /tmp/tmp/nova-agent_1.39.1_all.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent_1.39.1_all.deb;\
 in-target dpkg -iR /tmp/tmp;\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
