--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -3,9 +3,8 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-#url --url=http://mirror.rackspace.com/centos/7/os/x86_64/
-url --url=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
-#repo --name=base --baseurl=http://mirror.rackspace.com/centos/7/os/x86_64/
+#url --url=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
+url --url=http://mirror.lstn.net/scientific/7/x86_64/os/
 repo --name=base --baseurl=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/7/x86_64/
 
