spice console fixes for rpc, 15.04 systemd workarounds

--- a/CentOS_7_KVM.cfg
+++ b/CentOS_7_KVM.cfg
@@ -40,7 +40,7 @@ zerombr
 clearpart --all --initlabel
 #part biosboot --size=1
 part / --fstype=ext4 --grow --size=1024
-bootloader --location=mbr --boot-drive=vda --timeout=1 --append="root=/dev/vda1 console=tty0 console=ttyS0,9600"
+bootloader --location=mbr --boot-drive=vda --timeout=1 --append="root=/dev/vda1 console=tty0 console=ttyS0,9600 nofb nomodereset"
 
 # Shutdown when the kickstart is done
 shutdown
@@ -193,7 +193,7 @@ yum -y update
 # keep grub2 from using UUIDs and regenerate config
 #sed -i 's/#GRUB_DISABLE_LINUX_UUID.*/GRUB_DISABLE_LINUX_UUID="true"/g' /etc/default/grub
 echo 'GRUB_DISABLE_LINUX_UUID="true"' >> /etc/default/grub
-sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda1 console=tty0 console=ttyS0,9600"/g' /etc/default/grub
+sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda1 console=tty0 console=ttyS0,9600 nofb nomodereset"/g' /etc/default/grub
 #echo 'GRUB_TERMINAL=serial' >> /etc/default/grub
 #echo 'GRUB_SERIAL_COMMAND="serial --speed=115200 --unit=0 --word=8 --parity=no --stop=1"' >> /etc/default/grub
 grub2-mkconfig -o /boot/grub2/grub.cfg
