--- a/Red_Hat_Enterprise_Linux_7_KVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_KVM.cfg
@@ -40,7 +40,7 @@ zerombr
 clearpart --all --initlabel
 #part biosboot --size=1
 part / --fstype=ext4 --grow --size=1024
-bootloader --location=mbr --boot-drive=vda --timeout=1 --append="root=/dev/vda1 console=tty0 console=ttyS0,9600"
+bootloader --location=mbr --boot-drive=vda --timeout=1 --append="root=/dev/vda1 console=tty0 console=ttyS0,9600 nofb nomodereset"
 
 # Shutdown when the kickstart is done
 shutdown
@@ -208,7 +208,7 @@ for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; do
 
 # keep grub2 from using UUIDs and regenerate config
 echo 'GRUB_DISABLE_LINUX_UUID="true"' >> /etc/default/grub
-sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda1 console=tty0 console=ttyS0,9600"/g' /etc/default/grub
+sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda1 console=tty0 console=ttyS0,9600 nofb nomodereset"/g' /etc/default/grub
 grub2-mkconfig -o /boot/grub2/grub.cfg
 
 # package need for our RHN registration to work
