--- a/Ubuntu_15.04_PVHVM.cfg
+++ b/Ubuntu_15.04_PVHVM.cfg
@@ -86,9 +86,14 @@ rsync
 tar
 wget
 curl
+python
 parted
 
 %post
+
+# update
+apt-get update
+apt-get -y dist-upgrade
 
 # fix bootable flag
 parted -s /dev/xvda set 1 boot on
@@ -167,46 +172,71 @@ cat > /etc/fstab <<'EOF'
 EOF
 
 # cloud-init / nova-agent sad panda hacks
-cat > /etc/init/cloud-init-local.conf <<'EOF'
-# cloud-init - the initial cloud-init job
-#   crawls metadata service, emits cloud-config
-start on mounted MOUNTPOINT=/
+cat > /lib/systemd/system/cloud-init-local.service <<'EOF'
+[Unit]
+Description=Initial cloud-init job (pre-networking)
+Wants=local-fs.target
+After=local-fs.target
 
-task
+[Service]
+Type=oneshot
+ExecStartPre=/bin/sleep 20
+ExecStart=/usr/bin/cloud-init init --local
+RemainAfterExit=yes
+TimeoutSec=0
 
-console output
+# Output needs to appear in instance console output
+StandardOutput=journal+console
 
-pre-start script
-	/etc/init.d/xe-linux-distribution start
-	sleep 2
-	/etc/init.d/nova-agent start
-	sleep 13
-end script
-
-exec /usr/bin/cloud-init init --local 
+[Install]
+WantedBy=multi-user.target
 EOF
 
 # keep grub2 from using UUIDs and regenerate config
 sed -i 's/#GRUB_DISABLE_LINUX_UUID.*/GRUB_DISABLE_LINUX_UUID="true"/g' /etc/default/grub
 sed -i 's/GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"/g' /etc/default/grub
 sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="console=tty1 splash quiet"/g' /etc/default/grub
+sed -i 's/GRUB_TIMEOUT.*/GRUB_TIMEOUT=10/g' /etc/default/grub
+sed -i 's/GRUB_HIDDEN_TIMEOUT.*/GRUB_HIDDEN_TIMEOUT=10/g' /etc/default/grub
 update-grub
-
-# update
-apt-get update
-apt-get -y dist-upgrade
 
 # set ssh keys to regenerate at first boot if missing
 # this is a fallback to catch when cloud-init fails doing the same
 # it will do nothing if the keys already exist
 cat > /etc/rc.local <<'EOF'
+#!/bin/sh
 dpkg-reconfigure openssh-server
-echo > /etc/rc.local
+echo '#!/bin/sh' > /etc/rc.local
 EOF
 
 # stop nova-agent from starting twice since we start it from cloud-init now
-update-rc.d -f nova-agent remove
-update-rc.d -f xe-linux-distribution remove
+#update-rc.d -f nova-agent remove
+#update-rc.d -f xe-linux-distribution remove
+
+# some systemd workarounds
+sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
+update-rc.d xe-linux-distribution defaults
+
+# intention is to move this bit into nova-agent instead
+cat > /lib/systemd/system/nova-agent.service <<'EOF'
+[Unit]
+Description=nova-agent
+Wants=local-fs.target
+After=local-fs.target xe-linux-distribution.service
+
+[Service]
+Type=oneshot
+ExecStart=/etc/init.d/nova-agent start
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
+systemctl enable nova-agent
 
 cat > /etc/apt/apt.conf.d/00InstallRecommends <<'EOF'
 APT::Install-Recommends "true";
