Gentoo fix grub ncurses masked dep

--- a/Red_Hat_Enterprise_Linux_7_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_7_VMware.cfg
@@ -195,16 +195,16 @@ echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # use a static fstab
-#cat > /etc/fstab <<'EOF'
+cat > /etc/fstab <<'EOF'
 # Accessible filesystems, by reference, are maintained under '/dev/disk'
 # See man pages fstab(5), findfs(8), mount(8) and/or blkid(8) for more info
 #
-#/dev/sda1       / ext4 defaults,noatime 1 1
-#tmpfs /dev/shm tmpfs defaults 0 0
-#devpts /dev/pts devpts gid=5,mode=620 0 0
-#sysfs /sys sysfs defaults 0 0
-#proc /proc proc defaults 0 0
-#EOF
+/dev/sda1       / ext4 defaults,noatime 1 1
+tmpfs /dev/shm tmpfs defaults 0 0
+devpts /dev/pts devpts gid=5,mode=620 0 0
+sysfs /sys sysfs defaults 0 0
+proc /proc proc defaults 0 0
+EOF
 
 # set rackspace mirrors
 #sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/7/x86_64/%g' /etc/yum.repos.d/epel.repo
@@ -280,11 +280,10 @@ EOF
 for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; done
 
 # force grub to use generic disk labels, bootloader above does not do this
-sed -i 's%root=.*%root=/dev/sda1%g' /boot/grub/grub.conf
 cat >> /etc/sysconfig/grub <<'EOF'
 GRUB_DISABLE_LINUX_UUID="true"
 EOF
-grub2-mkconfig
+grub2-mkconfig > /boot/grub2/grub.conf
 
 # package need for our RHN registration to work
 wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
