attempt at some scaling network kernel tuning for onmetal images, fixes

--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -3,10 +3,10 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-#url --url="http://mirror.rackspace.com/centos/7/os/x86_64"
-url --url=http://mirror.centos.org/centos-7/7/os/x86_64/
-#repo --name=base --baseurl=http://mirror.rackspace.com/centos/7/os/x86_64/
-repo --name=base --baseurl=http://mirror.centos.org/centos-7/7/os/x86_64/
+url --url="http://mirror.rackspace.com/centos/7/os/x86_64"
+#url --url=http://mirror.centos.org/centos-7/7/os/x86_64/
+repo --name=base --baseurl=http://mirror.rackspace.com/centos/7/os/x86_64/
+#repo --name=base --baseurl=http://mirror.centos.org/centos-7/7/os/x86_64/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/7/x86_64/
 
 # Language and keyboard setup
@@ -153,8 +153,8 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # set some stuff
-echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
-echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+#echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
+#echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # teeth cloud-init
 wget http://98f7490b5235468aa0c1-f20868e4072493c909d50c027a960948.r72.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
@@ -202,6 +202,17 @@ cloud_init_modules:
  - rsyslog
  - users-groups
  - ssh
+
+# this bit scales some sysctl parameters to flavor type
+bootcmd:
+  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
+  - sysctl -p
 EOF
 
 # Work around cloud-init service not starting properly
