heat packages for rpc, /etc/machine-id removed, console fixes

--- a/CentOS_6_KVM.cfg
+++ b/CentOS_6_KVM.cfg
@@ -52,6 +52,9 @@ tar
 wget
 curl
 cloud-init
+gcc
+python-pip
+python-devel
 
 %end
 
@@ -189,6 +192,8 @@ cloud_config_modules:
  - runcmd
  - byobu
 EOF
+
+pip install heat-cfntools
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
