--- a/CentOS_7_KVM.cfg
+++ b/CentOS_7_KVM.cfg
@@ -64,6 +64,9 @@ xorg-x11-server-utils
 spice-vdagent
 qemu-guest-agent
 qemu-kvm
+gcc
+python-pip
+python-devel
 
 %end
 
@@ -198,6 +201,8 @@ sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="root=/dev/vda
 #echo 'GRUB_SERIAL_COMMAND="serial --speed=115200 --unit=0 --word=8 --parity=no --stop=1"' >> /etc/default/grub
 grub2-mkconfig -o /boot/grub2/grub.cfg
 
+pip install heat-cfntools
+
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_KVM
@@ -208,6 +213,7 @@ passwd -l root
 rm -f /root/anaconda-ks.cfg
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
