--- a/Debian_Unstable_KVM.cfg
+++ b/Debian_Unstable_KVM.cfg
@@ -58,7 +58,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect NoCloud, ConfigDrive
-d-i pkgsel/include string openssh-server rsync wget sudo curl resolvconf parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
+d-i pkgsel/include string openssh-server rsync wget sudo curl resolvconf parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot heat-cfntools
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
