--- a/Fedora_21_KVM.cfg
+++ b/Fedora_21_KVM.cfg
@@ -69,6 +69,7 @@ xorg-x11-server-utils
 spice-vdagent
 qemu-guest-agent
 qemu-kvm
+heat-cfntools
 -biosdevname
 -plymouth
 -NetworkManager
@@ -238,6 +239,7 @@ bash package_postback.sh Fedora_21_KVM
 # clean up
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
 rm -f /root/.bash_history
