--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -48,7 +48,7 @@ zerombr
 clearpart --all --initlabel
 #part biosboot --size=1
 part / --fstype=ext4 --grow --size=1024
-bootloader --timeout=1 --append="root=/dev/xvda1 console=hvc0"
+bootloader --timeout=1 --append="root=/dev/xvda1"
 
 # Shutdown when the kickstart is done
 shutdown
@@ -292,6 +292,7 @@ bash package_postback.sh Red_Hat_Enterprise_Linux_7_PVHVM
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
