--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -298,6 +298,7 @@ bash package_postback.sh Scientific_Linux_7_PVHVM
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /etc/ssh/ssh_host_*
 rm -f /root/.bash_history
 rm -f /root/.nano_history
