--- a/Ubuntu_12.04_KVM.cfg
+++ b/Ubuntu_12.04_KVM.cfg
@@ -89,6 +89,9 @@ python-spice-client-gtk
 xserver-xorg-video-qxl
 #qemu-kvm
 qemu-kvm-spice
+gcc
+python-pip
+python-dev
 
 %post
 
@@ -194,6 +197,8 @@ update-grub
 
 update-rc.d defaults spice-vdagentd
 #echo 'blacklist bochs-drm' >> /etc/modprobe.d/blacklist.conf
+
+pip install heat-cfntools
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
