--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -47,7 +47,7 @@ zerombr
 clearpart --all --initlabel
 #part biosboot --size=1
 part / --fstype=ext4 --grow --size=1024
-bootloader --timeout=1 --append="root=/dev/xvda1 console=hvc0"
+bootloader --timeout=1 --append="root=/dev/xvda1"
 
 # Shutdown when the kickstart is done
 shutdown
@@ -295,6 +295,9 @@ GRUB_DISABLE_LINUX_UUID="true"
 EOF
 grub2-mkconfig
 
+# fix dns
+echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
+
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_PVHVM
@@ -306,6 +309,7 @@ bash package_postback.sh CentOS_7_PVHVM
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /root/.bash_history
