--- a/Fedora_21_PVHVM.cfg
+++ b/Fedora_21_PVHVM.cfg
@@ -236,6 +236,7 @@ rm -rf /root/tmp
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
