--- a/Red_Hat_Enterprise_Linux_6_KVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_KVM.cfg
@@ -56,6 +56,9 @@ cloud-init
 cloud-utils
 cloud-utils-growpart
 dracut-modules-growroot
+gcc
+python-pip
+python-devel
 
 %end
 
@@ -199,6 +202,8 @@ EOF
 # package need for our RHN registration to work
 wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
 rpm -Uvh rhn-org-trusted-ssl-cert*
+
+pip install heat-cfntools
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
