--- a/Red_Hat_Enterprise_Linux_7_KVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_KVM.cfg
@@ -66,6 +66,9 @@ xorg-x11-server-utils
 spice-vdagent
 qemu-guest-agent
 qemu-kvm
+gcc
+python-pip
+python-devel
 
 %end
 
@@ -215,6 +218,8 @@ grub2-mkconfig -o /boot/grub2/grub.cfg
 wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
 rpm -Uvh rhn-org-trusted-ssl-cert*
 
+pip install heat-cfntools
+
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_7_KVM
@@ -224,6 +229,7 @@ passwd -d root
 passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
+rm -f /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
