needed to zero out instead of remove /etc/machine-id

--- a/Red_Hat_Enterprise_Linux_7_KVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_KVM.cfg
@@ -229,7 +229,7 @@ passwd -d root
 passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
-rm -f /etc/machine-id
+echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
