--- a/Red_Hat_Enterprise_Linux_7_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_7_VMware.cfg
@@ -299,7 +299,7 @@ bash package_postback.sh Red_Hat_Enterprise_Linux_7_VMware
 # clean up
 yum clean all
 truncate -c -s 0 /var/log/yum.log
-rm -f /etc/machine-id
+echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
