--- a/CentOS_7_KVM.cfg
+++ b/CentOS_7_KVM.cfg
@@ -213,7 +213,7 @@ passwd -l root
 rm -f /root/anaconda-ks.cfg
 yum clean all
 truncate -c -s 0 /var/log/yum.log
-rm -f /etc/machine-id
+echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
