--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -309,7 +309,7 @@ bash package_postback.sh CentOS_7_PVHVM
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
-rm -f /etc/machine-id
+echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /root/.bash_history
