--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -292,7 +292,7 @@ bash package_postback.sh Red_Hat_Enterprise_Linux_7_PVHVM
 passwd -d root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
-rm -f /etc/machine-id
+echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
